manifests/istio-eastwest/cluster1/gateway-network1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-eastwestgateway
  namespace: istio-eastwest
  labels:
    app: istio-eastwestgateway
    istio: eastwestgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    topology.istio.io/network: network1
spec:
  selector:
    matchLabels:
      app: istio-eastwestgateway
      istio: eastwestgateway
      topology.istio.io/network: network1
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
      labels:
        app: istio-eastwestgateway
        istio: eastwestgateway
        sidecar.istio.io/inject: "true"
        topology.istio.io/network: network1
    spec:
      containers:
        - name: istio-proxy
          image: auto
          ports:
            - containerPort: 15021
              protocol: TCP
            - containerPort: 15443
              protocol: TCP
            - containerPort: 15012
              protocol: TCP
            - containerPort: 15017
              protocol: TCP
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/istio/ingressgateway-certs
              name: ingressgateway-certs
              readOnly: true
            - mountPath: /etc/istio/ingressgateway-ca-certs
              name: ingressgateway-ca-certs
              readOnly: true
      serviceAccountName: istio-eastwestgateway-service-account
      volumes:
        - name: ingressgateway-certs
          secret:
            optional: true
            secretName: istio-ingressgateway-certs
        - name: ingressgateway-ca-certs
          secret:
            optional: true
            secretName: istio-ingressgateway-ca-certs
---
apiVersion: v1
kind: Service
metadata:
  name: istio-eastwestgateway
  namespace: istio-eastwest
  labels:
    app: istio-eastwestgateway
    istio: eastwestgateway
    topology.istio.io/network: network1
spec:
  type: LoadBalancer
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: tls
      port: 15443
      protocol: TCP
      targetPort: 15443
    - name: tls-istiod
      port: 15012
      protocol: TCP
      targetPort: 15012
    - name: tls-webhook
      port: 15017
      protocol: TCP
      targetPort: 15017
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
    topology.istio.io/network: network1
