manifests/istio-eastwest/cluster1/expose-cross-network-gateway.yaml
# networking.istio.io Gateway — same namespace as istio-eastwestgateway pods (selector scope).
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cross-network-gateway
  namespace: istio-eastwest
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"
